# Mike-tyson

./: README.md
quant-system-hf/: .env.example  .gitignore  README.md  pyproject.toml
quant-system-hf/config/: costs.yml  instruments.yml  logging.yml  pipelines.yml  portfolio.yml  risk.yml  sessions.yml  walkforward.yml
quant-system-hf/docs/: architecture.md  capacity_analysis.md  data_dictionary.md  drift_detection.md  execution_model.md  governance_framework.md  hypothesis_registry.md  research_log.md  risk_framework.md
quant-system-hf/docs/runbooks/: backfill.md  deployment.md  incident_response.md  live_failover.md
quant-system-hf/infra/: docker-compose.yml
quant-system-hf/infra/docker/: Dockerfile
quant-system-hf/scripts/: backfill.py  build_taxonomy.py  generate_report.py  run_pipeline.py  run_walkforward.py  start_live.py
quant-system-hf/src/api/: app.py  routes_jobs.py  routes_live.py  routes_taxonomy.py  routes_trades.py  schemas.py
quant-system-hf/src/backtest/: engine.py  execution_model.py  fill_logic.py  slippage_model.py  spread_model.py
quant-system-hf/src/common/: io.py  metrics.py  time.py  types.py  utils.py  validation.py
quant-system-hf/src/features/: build_features.py  feature_registry.py
quant-system-hf/src/ingest/: import_calendars.py  import_marketdata.py  import_spread_data.py  import_trades.py
quant-system-hf/src/live/: broker_adapter.py  execution_monitor.py  kill_switch.py  position_manager.py  risk_manager.py  signal_runner.py
quant-system-hf/tests/: test_metrics.py  test_validation.py
(+23 files in other folders)
